--- a/AVSyc/mainwindow.ui
+++ b/AVSyc/mainwindow.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>815</width>
+    <height>589</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>815</width>
+    <height>589</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>815</width>
+    <height>589</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Mace Windu</string>
@@ -17,7 +35,7 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>10</x>
       <y>60</y>
       <width>160</width>
       <height>101</height>
@@ -35,7 +53,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>10</x>
       <y>40</y>
       <width>47</width>
       <height>13</height>
@@ -48,7 +66,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>210</x>
       <y>40</y>
       <width>47</width>
       <height>13</height>
@@ -61,7 +79,7 @@
    <widget class="QWidget" name="verticalLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>210</x>
       <y>60</y>
       <width>160</width>
       <height>101</height>
@@ -79,7 +97,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>430</x>
       <y>40</y>
       <width>47</width>
       <height>13</height>
@@ -92,7 +110,7 @@
    <widget class="QWidget" name="verticalLayoutWidget_3">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>430</x>
       <y>60</y>
       <width>160</width>
       <height>101</height>
@@ -110,7 +128,7 @@
    <widget class="QWidget" name="verticalLayoutWidget_4">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>10</x>
       <y>190</y>
       <width>160</width>
       <height>101</height>
@@ -128,7 +146,7 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>10</x>
       <y>170</y>
       <width>47</width>
       <height>13</height>
@@ -141,7 +159,7 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>210</x>
       <y>170</y>
       <width>47</width>
       <height>13</height>
@@ -154,7 +172,7 @@
    <widget class="QWidget" name="verticalLayoutWidget_5">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>210</x>
       <y>190</y>
       <width>160</width>
       <height>101</height>
@@ -172,7 +190,7 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>430</x>
       <y>170</y>
       <width>47</width>
       <height>13</height>
@@ -185,7 +203,7 @@
    <widget class="QWidget" name="verticalLayoutWidget_6">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>430</x>
       <y>190</y>
       <width>160</width>
       <height>101</height>
@@ -203,7 +221,7 @@
    <widget class="QWidget" name="verticalLayoutWidget_7">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>10</x>
       <y>320</y>
       <width>160</width>
       <height>101</height>
@@ -221,7 +239,7 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>10</x>
       <y>300</y>
       <width>47</width>
       <height>13</height>
@@ -234,7 +252,7 @@
    <widget class="QWidget" name="verticalLayoutWidget_8">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>210</x>
       <y>320</y>
       <width>160</width>
       <height>101</height>
@@ -252,7 +270,7 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>210</x>
       <y>300</y>
       <width>47</width>
       <height>13</height>
@@ -265,15 +283,19 @@
    <widget class="QWidget" name="verticalLayoutWidget_9">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>430</x>
       <y>320</y>
-      <width>160</width>
+      <width>301</width>
       <height>101</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_9">
      <item>
-      <widget class="QLineEdit" name="lineEdit_9"/>
+      <widget class="QLineEdit" name="lineEdit_9">
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QTextEdit" name="textEdit_9"/>
@@ -283,14 +305,27 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>430</x>
       <y>300</y>
       <width>47</width>
       <height>13</height>
      </rect>
     </property>
     <property name="text">
-     <string>aaaa</string>
+     <string>Path</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>740</x>
+      <y>320</y>
+      <width>75</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Browse</string>
     </property>
    </widget>
   </widget>
@@ -299,12 +334,11 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>815</width>
      <height>22</height>
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
