--- a/BaseEditor/baseeditor.ui
+++ b/BaseEditor/baseeditor.ui
@@ -34,21 +34,21 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="0">
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="addButton">
       <property name="text">
-       <string>add</string>
+       <string>Add</string>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="deleteButton">
       <property name="text">
-       <string>delete</string>
+       <string>Delete</string>
       </property>
      </widget>
     </item>
     <item row="0" column="0" colspan="2">
-     <widget class="QTableWidget" name="tableWidget">
+     <widget class="QTableWidget" name="baseTable">
       <property name="maximumSize">
        <size>
         <width>16777215</width>
@@ -135,14 +135,14 @@
      </widget>
     </item>
     <item row="2" column="0">
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="saveButton">
       <property name="text">
        <string>Save</string>
       </property>
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QPushButton" name="pushButton_4">
+     <widget class="QPushButton" name="loadButton">
       <property name="text">
        <string>Load</string>
       </property>
